<resources>
    <string name="app_name">flipbook</string>
    <string name="mapa">Mapa</string>
    <string name="buscar">Buscar</string>
    <string name="subir">Subir</string>
    <string name="usuarios">Usuarios</string>
    <string name="perfil">Perfil</string>
    <string name="login">Login</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>
    <string name="atr_s">Atrás</string>
    <string name="registrarse">Registrarse</string>
    <string name="errorLogin">No ha sido posible iniciar sesión</string>
    <string name="errorRegistro">Error al registrar la cuenta</string>
    <string name="lecturas_recientes">Lecturas recientes</string>
    <string name="libros_subidos">Libros subidos</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="genero">Género</string>
    <string name="isbn" translatable="false">ISBN</string>
    <string name="escanear">Escanear</string>
    <string name="subir_libro">Subir libro</string>
    <string name="escaneando">Escaneando código...</string>
    <string name="cancelado">Cancelado</string>
    <string name="escaneado">Escaneado: </string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="estado">Estado</string>
    <string name="enciendagps">Por favor encienda el GPS</string>


    <string-array name="estados">
        <item>Nuevo</item>
        <item>Buen estado</item>
        <item>Usado</item>
        <item>Poco legible</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Reservar">Reservar</string>
    <string name="voz">Voz</string>
    <string name="los_m_s_populares">Los más populares</string>
    <string name="Borrar">Borrar</string>
</resources>